<resources>
    <string name="app_name">Вконтачим</string>
    <string name="sign_in_to_continue">Войдите для продолжения</string>
    <string name="to_come_in">Войти</string>
    <string name="authorizations">Авторизация</string>
    <string name="information">Полная информация</string>
    <string name="friends">Друзья</string>
    <string name="communities">Сообщества</string>
    <string name="photos">Фотографии</string>
    <string name="video">Видео</string>
    <string name="music">Музыка</string>
    <string name="about_the_application">О приложении</string>
    <string name="go_out">Выйти</string>
    <string name="friend">Друзья</string>
    <string name="photo_albums">Фотоальбомы</string>
    <string name="logout">Выход из аккаунта</string>
    <string name="cancel">Отмена</string>
    <string name="added">Добавленные</string>
    <string name="delete">Удалить из моих видео</string>
    <string name="copy_link">Скопировать ссылку</string>
    <string name="link_copied">Сcылка скопирована</string>
    <string name="video_recording">Видеозапись</string>
    <string name="comments">Комментарии</string>
    <string name="comment">Комментарий</string>
    <string name="сomment_added">Комментарий добавлен</string>
    <string name="add_friend">Добавить в друзья</string>
    <string name="subscribe">Подписаться</string>
    <string name="you_subscribed">Вы подписаны</string>
    <string name="in_friends">В друзьях</string>
    <string name="not_filled">Не заполнено</string>
    <string name="home">Главная</string>
    <string name="profile">Профиль</string>
    <string name="news">Новости</string>
    <string name="recommended">Рекомендованные</string>
    <string name="global_search">ГЛОБАЛЬНЫЙ ПОИСК (ЛЮДИ)</string>
    <string name="search">Поиск</string>
    <string name="clear">очистить</string>
    <string name="search_history">История поиска</string>

    <plurals name="number_of_photos">
        <item quantity="one">фотография</item>
        <item quantity="two">фотографии</item>
        <item quantity="few">фотографии</item>
        <item quantity="many">фотографий</item>
        <item quantity="other">фотографий</item>
    </plurals>

    <plurals name="number_of_views">
        <item quantity="one">просмотр</item>
        <item quantity="two">проспотра</item>
        <item quantity="few">проспотра</item>
        <item quantity="many">просмотров</item>
        <item quantity="other">просмотров</item>
    </plurals>

    <plurals name="number_of_participants">
        <item quantity="one">участник</item>
        <item quantity="two">участника</item>
        <item quantity="few">участника</item>
        <item quantity="many">участников</item>
        <item quantity="other">участников</item>
    </plurals>

    <plurals name="number_of_subscribers">
        <item quantity="one">подписчик</item>
        <item quantity="two">подписчика</item>
        <item quantity="few">подписчика</item>
        <item quantity="many">подписчиков</item>
        <item quantity="other">подписчиков</item>
    </plurals>

    <plurals name="number_of_friends">
        <item quantity="one">друг</item>
        <item quantity="two">друга</item>
        <item quantity="few">друга</item>
        <item quantity="many">друзей</item>
        <item quantity="other">друзей</item>
    </plurals>
</resources>